implement object description window